; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task_policy.c_proc_inherit_task_role.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task_policy.c_proc_inherit_task_role.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TASK_POLICY_ATTRIBUTE = common dso_local global i32 0, align 4
@TASK_POLICY_ROLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @proc_inherit_task_role(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @TASK_POLICY_ATTRIBUTE, align 4
  %8 = load i32, i32* @TASK_POLICY_ROLE, align 4
  %9 = call i32 @proc_get_task_policy(i32 %6, i32 %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @TASK_POLICY_ATTRIBUTE, align 4
  %12 = load i32, i32* @TASK_POLICY_ROLE, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @proc_set_task_policy(i32 %10, i32 %11, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @proc_get_task_policy(i32, i32, i32) #1

declare dso_local i32 @proc_set_task_policy(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
